# minishell

./: CMakeLists.txt  Makefile  block_manipulation.c  builtin.c  cleaners.c  dollar.c  dollar_2.c  env_struct_revert.c  exec_and_pipes.c  exec_compose.c  h_doc_processor.c  init.c  minishel.h  regular_exec.c  regular_exec_2.c  subshell.c  syntax_check.c  tokenizer.c  tokenizer_tools_1.c  tokenizer_tools_2.c  tokenizer_tools_3.c  tools_1.c  tools_2.c  tools_3.c  wildcards_1.c  wildcards_2.c
builtins_minishel/: builtins.h  cases.txt
builtins_minishel/src/env/: duplicate_env.c
builtins_minishel/src/free_builtins/: free_dollar.c  free_exp_env_list.c  free_export.c
builtins_minishel/src/functions/: cd.c  dollar.c  echo.c  env.c  exit.c  export.c  pwd.c  unset.c
builtins_minishel/src/functions_utils/: cd_utils.c  dollar_utils.c  export_utils_0.c  export_utils_1.c  export_utils_2.c  export_utils_3.c
builtins_minishel/src/functions_utils/utils_cd/: cd_utils_0.c  (+1 more)
includes/: minishell.h
libft/: Makefile  ft_atof.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_printf.c  ft_printf_helper_functions.c  ft_printf_helper_functions2.c  ft_printf_helper_functions_bonus.c  ft_printf_operand_processors.c  ft_printf_operand_processors2.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_striteri.c  (+15 more)
libraries/readline-8.2/: Makefile  config.status  history.pc  readline.pc
libraries/readline-8.2/doc/: Makefile
libraries/readline-8.2/examples/: Makefile
libraries/readline-8.2/shlib/: Makefile
src/: collection.c  minishell.c
src/functions/: cd.c  ctrl_d.c  dollar.c  echo.c  env.c  export.c  ft_execve.c  pwd.c  unset.c
src/functions_utils/: cd_utils.c  duplicate_env.c  utils_dollar.c
src/jamanakavor/: jamanakavor.c
src/tokenization/: token_utils.c  tokenization.c
src/utils/: utils.c
(+11 files in other folders)
